# take-it-easy

./: Cargo.toml  README.md  take-it-easy.service
src/: audio.rs  main.rs  server.rs  shifter.rs
static/: app.js  index.html
